--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,16 +45,21 @@ dependencies:
   path_provider: ^2.0.11
   uuid: ^3.0.0
   sqflite: ^2.0.0+3
-  flutter_local_notifications:
+  flutter_local_notifications: ^12.0.0
+
   path: ^1.8.1
   google_nav_bar:
   google_fonts:
   animations:
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.9.2
   flutter_test:
     sdk: flutter
-
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/logo.webp"
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
